<?xml version="1.0" encoding="utf-8"?>
<com.android.launcher3.common.multiselect.MultiSelectPanel android:gravity="center|top" android:layout_gravity="center|top" android:layout_width="fill_parent" android:layout_height="@dimen/multi_select_pannel_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/multi_select_panel_layout" android:background="@drawable/multi_select_panel_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/multi_select_pannel_margin_top" android:layout_marginStart="@dimen/multi_select_pannel_margin_start" android:layout_marginEnd="@dimen/multi_select_pannel_margin_end">
        <TextView android:id="@id/multi_select_uninstall" android:text="@string/multi_select_disable" android:drawableTop="@drawable/homescreen_edit_selection_uninstall" style="@style/MultiselectPannelStyle" />
        <TextView android:id="@id/multi_select_remove_shortcut" android:text="@string/multi_select_remove_shortcut" android:drawableTop="@drawable/homescreen_edit_selection_remove" style="@style/MultiselectPannelStyle" />
        <TextView android:id="@id/multi_select_create_folder" android:text="@string/multi_select_create_folder" android:drawableTop="@drawable/homescreen_edit_selection_create" style="@style/MultiselectPannelStyle" />
        <TextView android:id="@id/multi_select_secure_folder" android:text="@string/multi_select_secure_folder" android:drawableTop="@drawable/homescreen_edit_selection_secure" style="@style/MultiselectPannelStyle" />
        <TextView android:id="@id/multi_select_add_to_personal" android:text="@string/multi_select_add_to_personal" android:drawableTop="@drawable/homescreen_edit_selection_add_to_personal" style="@style/MultiselectPannelStyle" />
    </LinearLayout>
</com.android.launcher3.common.multiselect.MultiSelectPanel>